# FEM

./: CMakeLists.txt  README.md  makefile
OpenGL/draw/: fem2d_mesh_display_opengl.cpp
file/flower/: data.json
file/l-func/: bords.txt  data.json  params.txt
file/light-test-u-const/: data.json
file/light-test-u-func/: bords.txt  nodes.txt
file/nodes-6/: areas.txt  bords.txt  params.txt
file/nodes-9/: areas.txt  bords.txt  elems.txt  params.txt
file/poleleyka/: data.json
file/polina-top/: data.json
file/study-nodes-5/: areas.txt  data.json  elems.txt
file/study-nodes-6/: params.txt
file/study-nodes-9/: data.json
generator/include/: Research.hpp
generator/src/: generator.cpp
image/nodes-6/: plot.ipynb
include/: FEM.hpp  Function.hpp  Logger.hpp  Union.hpp
include/LOS/: Data.hpp  LOS.hpp  LOS_Function.hpp
include/argparse/: argparse.hpp
include/cross-platform/: filesystem.hpp
include/timer/: cxxtimer.hpp
include/utils/: Vector.hpp  argv.hpp  friendly.hpp  lightweight.hpp  overload.hpp
latex/: main.aux  main.sta  main.tex
latex/_minted-main/: 0F23E810F6229D1AA3488D741EBFC6CE424CD0E138915D44EC4CCC580A02BA47.pygtex  0F23E810F6229D1AA3488D741EBFC6CEF8117E1F892DC05F6E957E58F760A12B.pygtex  6A7A510135B29BC7B6115E46CE5A536504726604FB183BEBBFBF7F90B1016412.pygtex  82371035E276007C88AF8EFBD18EDE6404726604FB183BEBBFBF7F90B1016412.pygtex  8C3A7B2753A3A0968FD2549C86BA376D746082791864398D3452D8B98E45976C.pygtex  C12535427651A35307C0DAFA24617EE702018AB381AD265562A95348870C690B.pygtex  E5379F7ED4BC7F8A231898DE45D606A3F9AC196C28A9F4BB1F291626A999995B.pygtex  E7FF9DDD6EC3449ED9B04D52B58F4C1904726604FB183BEBBFBF7F90B1016412.pygtex
latex/styles/: preamble.sty
latex/titlepage/: title.tex
output/nodes-6/: di.txt  gg.txt
rapport/: Data.hpp  main.aux  main.out  main.sta  main.tex
rapport/_minted-main/: 1687492AD3B2974A439E4B36D8695AACD39DC2AD74E47CACD64C689AD8CB667D.pygtex  1FC30ECA74E56EC9C42FC2611C924C1256BF1A09C8F559D9906C82508026A994.pygtex  2665A1C894C69D6BB0B53F6764337A8038EAA7AE166122FC5A6D7255FAF69EBF.pygtex  2668A6121EBAE610A7E99EA83111DF2BFA57E529A413609C5A688EAC7C3E5227.pygtex  3A3F92AA02C89C06928A9D408226013056BF1A09C8F559D9906C82508026A994.pygtex  3C164D551678866588DFC4C1DACE4CA5D39DC2AD74E47CACD64C689AD8CB667D.pygtex  3F1D0E36B517E4DB2E0E1327C72BC53C31F531E5DA9D3518EC5C6384DB37D7C0.pygtex  536BC50812BB911F5DF8465A29D83C37C5BBD61B19955BE1808CE2B81B32653A.pygtex  (+10 more)
rapport/source/: Data.hpp  FEM.hpp  LOS.hpp  LOS_Function.hpp  (+4 more)
script/: Set-Path.ps1  tex-compile.ps1
src/: main.cpp
(+149 files in other folders)
